[tool.poetry]
name = "computer-vision"
version = "0.1.0"
description = ""
authors = ["Prathamesh Chougale <prathamesh17170@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.17.0"
pandas = "^2.2.2"
imageio = "^2.35.1"
matplotlib = "^3.9.2"
opencv-python = "^4.10.0.84"
scikit-learn = "^1.5.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
